# fastapi-auth-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TEST_EXTERNAL_FRONTEND.html  alembic.ini  deploy.sh  docker-compose.yml  main.py  pyproject.toml  test.html
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: auth.py  health.py  users.py
app/core/: __init__.py  config.py  exceptions.py  security.py
app/db/: __init__.py  base.py  session.py
app/middleware/: __init__.py  rate_limit.py  security.py
app/models/: __init__.py  oauth.py  refresh_token.py  user.py
app/schemas/: __init__.py  auth.py  common.py  user.py
app/services/: __init__.py  auth_service.py  oauth_service.py  token_service.py  user_service.py
static/: test.html
